storage/clusters/base/ceph/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    kubernetes.io/ingress.allow-http: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rook.${PRIMARY_DOMAIN}
      secretName: rook-tls
  rules:
    - host: rook.${PRIMARY_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  name: http-dashboard
